ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-05-03 Daniel Andreca
	- CONFIGS:
		* Repair support for Ubuntu
	- GUI:
		* Improve ip management

2009-05-07 Thomas Häber
	- LANGUAGES:
		* added (missing) translation strings
		* fixed translations for e-mails with {BASE_SERVER_VHOST_PREFIX}
	- GUI:
		* code cleanup (some refactoring, coding style ...)
		* added hint about {BASE_SERVER_VHOST_PREFIX} in table header
		* added Zend as external repository into include library of ispCP GUI

2009-05-07 Benedikt Heintel
	- LANGUAGES:
		* Upated: Catalan
		* Update: Portugese (Brazil)

2009-05-03 Daniel Andreca
	- ENGINE:
		* Added Feature: DNS management support. - thanks to Blondak
		* Fixed #1814: r1725 raises regression
		* One more fix to ticket #1499: Where am i?
	- GUI:
		* Fixed Double encoding in logs

2009-05-02 Daniel Andreca
	- ENGINE:
		* Added Feature: Virtual network cards can be added with addon ip from gui
	- GUI:
		* Fixed #1810: bug in admin/server_status.php

2009-04-29 Thomas Häber
	- GUI:
		* Added Feature: Show cpu cores in admin system tools - thanks to qisback
		* Fixed #1721: e-Mail from Supportsystem has problems with special chars. - thanks to Thomas Wacker
		* Fixed #1689: Support ticket priority in email - big thanks to Thomas Wacker

2009-04-27 Christian Hernmarck
	- GUI:
		* Fixed #1499: "where am I?" - highlighting the <tr> line under mouse...

2009-04-27 Benedikt Heintel
	- DISTS:
		* Updated: (Ubuntu) Added support for Ubuntu 9.04 Jaunty Jackalope

2009-04-27 Christian Hernmarck
	- CONFIGS:
		* Fixed #1806: Typo/Error in: configs/debian/database/database.sql
		* Added: SMPT-SSL in the db-update script...

2009-04-26 Benedikt Heintel
	- DISTS:
		* Fixed #1778: (FreeBSD) Add FreeBSD Patch

2009-04-25 Benedikt Heintel
	- TOOLS:
		* Update phpMyAdmin to version 3.1.4

2009-04-24 Jochen Manz
	- GUI:
		* missing db updates for per-domain backup #2

2009-04-24 Malte Geierhos
	- GUI:
		* Fixed #1803 (wrong link) -> disabled the function